--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -10,6 +10,44 @@
 
 <body>
     <h1>Maple Mustard Meatballs</h1>
+    <img src="../Maple Mustard Meatballs.webp" alt="Maple Mustard Meatballs" srcset=""
+        style="height:400px; width:auto;margin-inline:auto">
+    <h2>Description</h2>
+    <p>These easy to make meatballs are baked in a sweet and tangy maple syrup and mustard sauce. Serve over rice,
+        noodles, or mashed potatoes for a stress-free weekday meal. A great option for potlucks too!</p>
+    <h2>Ingredients</h2>
+    <h3>Meatballs:</h3>
+    <ul>
+        <li>½ pound ground pork</li>
+        <li>½ pound ground beef</li>
+        <li>¼ cup rolled oats</li>
+        <li>¼ cup milk</li>
+        <li>1 large egg, lightly beaten</li>
+        <li>¾ teaspoon salt</li>
+        <li> ½ teaspoon garlic powder</li>
+        <li>⅛ teaspoon ground black pepper</li>
+        <li>1 tablespoon olive oil</li>
+        <li>1 small onion, diced</li>
+    </ul>
+    <h3>Sauce:</h3>
+    <ul>
+        <li>⅔ cup pure maple syrup</li>
+        <li>¼ cup prepared yellow mustard</li>
+        <li>2 tablespoons ketchup</li>
+        <li>½ teaspoon hot pepper sauce (such as Tabasco®)</li>
+        <li>¼ teaspoon salt</li>
+    </ul>
 </body>
+<h2>Steps</h2>
+<ol>
+    <li>Preheat the oven to 375 degrees F (190 degrees C). </li>
+    <li>Combine ground pork, ground beef, oats, milk, egg, salt, garlic powder, and pepper in a large bowl. Shape into
+        24 meatballs, about 1 1/2 inches in diameter. </li>
+    <li>Heat oil in a large skillet over medium heat. Cook meatballs until evenly browned, about 8 to 10 minutes. Place
+        meatballs into an 8x8-inch casserole dish and scatter onion over top. </li>
+    <li>Combine maple syrup, mustard, ketchup, hot pepper sauce, and salt for sauce in a medium bowl. Pour over
+        meatballs and toss to coat. </li>
+    <li>Bake in the preheated oven until set and cooked through, about 30 minutes, stirring halfway through. </li>
+</ol>
 
 </html>
